--- a/index.html
+++ b/index.html
@@ -1172,16 +1172,16 @@ In 2021, this infographic was awarded a Registered Graphic Designers, RGD In-Hou
 
          </section>
 
-         <section id="Asteroid" class="notransition" onclick="displayRadiationText()">
+         <div id="Asteroid" class="notransition">
             <img src="./SVG/asteroid.svg"></img>
-         </section>
+         </div>
 
          <img id="Starsystemstatic" src="./SVG/Meteorshower.svg">
 
          <img id="Skylayer2" src="./SVG/skylayer2.svg" style="width: 100%;">
 
-         <section id="Planet1" onclick="displayGeoText()">
-            <svg width="20vw"  viewBox="0 0 600 400" fill="none" xmlns="http://www.w3.org/2000/svg">
+         <div id="Planet1">
+            <svg width="40vw"  viewBox="-500 0 1000 400" fill="none" xmlns="http://www.w3.org/2000/svg">
                <g id="Planet1">
                <g id="bgplanets">
                <path id="Vector" opacity="0.75" d="M352.827 277.829C366.79 277.829 378.109 266.51 378.109 252.547C378.109 238.584 366.79 227.265 352.827 227.265C338.864 227.265 327.545 238.584 327.545 252.547C327.545 266.51 338.864 277.829 352.827 277.829Z" fill="url(#paint0_radial_476_9)"/>
@@ -1337,10 +1337,8 @@ In 2021, this infographic was awarded a Registered Graphic Designers, RGD In-Hou
                </linearGradient>
                </defs>
                </svg>
-               
-               
 
-         </section>
+         </div>
 
          <span id="Planet2">
             <svg width="15vw" viewBox="0 0 237 173" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1408,7 +1406,7 @@ In 2021, this infographic was awarded a Registered Graphic Designers, RGD In-Hou
 
          </span>
          <div id="Satellite" onclick="displayDeepSpaceText()">
-            <svg width="32vw" class="satellite" viewBox="-800 0 1700 434" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg width="32vw" class="satellite" viewBox="-680 0 1700 434" fill="none" xmlns="http://www.w3.org/2000/svg">
                <g id="Satellite">
                   <g id="satantenna">
                      <path id="Vector" d="M223.4 150.2L11.2 382.2" stroke="url(#paint0_linear_2_42)" stroke-width="4"
