--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
    <div class="container">
 
 
-      <img class="sideline" src="./img/sideline.png">
-      <p id="h4" class="sidetext">RADIATION FLUX</p>
+      <img class="sideline" src="./SVG/sideline.svg">
+      
       <div class="header">
          <a href ="https://discoverourlab.triumf.ca" class="homebutton"><img src="./icon/TRIUMF_Logo_DOL.svg" style="width: 305px; padding: 20px 10px"></a>
         
@@ -35,7 +35,8 @@
         <button onclick="closeModal()" class="close-button">&times;</button>
       </div>
       <div class="modal-welcome" style="padding-top: 0px;">
-       <h3>Radiation Environments</h3>
+       <div class="en"><h3>Radiation Environments</h3></div>
+       <div class="fr"><h3>Le Rayonnement Radioactif Dans Divers Environmnements</h3></div>
       <div class="en">
       <p>
 Click on the animated objects to learn more about background radiation at its elevation in the atmosphere. <br><br>
