--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <img class="sideline" src="./SVG/sideline.svg">
       
       <div class="header">
-         <a href ="https://discoverourlab.triumf.ca" class="homebutton"><img src="./icon/TRIUMF_Logo_DOL.svg" style="width: 305px; padding: 20px 10px"></a>
+         <a href ="https://www.triumf.ca/pif-nif" class="homebutton"><img src="./icon/TRIUMF_Logo_DOL.svg" style="width: 305px; padding: 20px 10px"></a>
         
    
       </div>
