Changed page title tag
Updated <title> tag to reflect new page name 'Radiation Environments'

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="ie=chrome=1">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Triumf Background Radiation Page</title>
+   <title>Radiation Environments</title>
    <link rel="stylesheet" href="./style.css">
    <script src="./data.js"></script>
 
