Update via file upload
Adjustments to satellite scale across screens to avoid clipping through rocket.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ In 2021, this infographic was awarded a Registered Graphic Designers, RGD In-Hou
                radiation belt
             </p></div>
             <div class = "fr">
-            <p id="h3">LA RADIATION <br>DANS DIVERS<br>ENVIRONNEMENTS NATURELS</p><p id="TextBody">La radiation environnementale naturelle provient de plusieurs sources telles que le rayonnement cosmique extragalactique, le vent solaire et les ceintures de radiation qui encerclent la Terre
+            <p id="h3">LA RADIATION DANS DIVERS<br>ENVIRONNEMENTS NATURELS</p><p id="TextBody">La radiation environnementale naturelle provient de plusieurs sources telles que le rayonnement cosmique extragalactique, le vent solaire et les ceintures de radiation qui encerclent la Terre
             </p></div>
          </section>
          <div id="sunanim" onclick="displayRadiationText()">
@@ -1407,7 +1407,7 @@ In 2021, this infographic was awarded a Registered Graphic Designers, RGD In-Hou
 
          </span>
          <div id="Satellite" onclick="displayDeepSpaceText()">
-            <svg width="32vw" class="satellite" viewBox="-680 0 1700 434" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg width="22vw" class="satellite" viewBox="-680 0 1700 434" fill="none" xmlns="http://www.w3.org/2000/svg">
                <g id="Satellite">
                   <g id="satantenna">
                      <path id="Vector" d="M223.4 150.2L11.2 382.2" stroke="url(#paint0_linear_2_42)" stroke-width="4"
